# rusty-attachments

./: .gitignore  Cargo.toml  README.md
.kiro/powers/rusty-attachments-design/: POWER.md
.kiro/powers/rusty-attachments-design/steering/: todo.md  utilities.md  vfs-dirs.md  vfs-writes.md  vfs.md
.kiro/steering/: design-steering.md
crates/common/src/: hash.rs  path_utils.rs
crates/example/tauri/: Cargo.toml  README.md  tauri.conf.json
crates/example/tauri/capabilities/: default.json
crates/example/tauri/src/: commands.rs  error.rs  lib.rs  main.rs  progress.rs  types.rs
crates/example/tauri/ui/: index.html
crates/filesystem/: Cargo.toml
crates/filesystem/src/: diff.rs  error.rs  expand.rs  glob.rs  lib.rs  scanner.rs  stat_cache.rs  symlink.rs
crates/ja-deadline-utils/: Cargo.toml
crates/ja-deadline-utils/src/: bundle_submit.rs  conversion.rs  error.rs  lib.rs  types.rs  worker_sync.rs
crates/model/: Cargo.toml
crates/model/src/: decode.rs  encode.rs  error.rs  hash.rs  lib.rs  manifest_types.rs  merge.rs  v2023_03_03.rs  v2025_12.rs  v2025_12_04.rs  version.rs
crates/model/src/operations/: compose.rs  diff.rs  filter.rs  join.rs  mod.rs  partition.rs  subtree.rs
crates/model/src/test_data/: manifest_v2023_03_03.json
crates/profiles/src/: grouping.rs
crates/python/: Cargo.toml  README.md  pyproject.toml  rusty_attachments.pyi
crates/python/examples/: submit_job.py  test_upload.py
crates/python/examples/samples/: BealineTestJobBundles  README.md
crates/python/src/: lib.rs
crates/python/tests/: test_types.py
crates/storage/: Cargo.toml
crates/storage-crt/src/: client.rs
crates/storage/src/: cas.rs  data_cache.rs  download.rs  error.rs  lib.rs  manifest_storage.rs  traits.rs  types.rs  upload.rs
crates/storage/src/hash_cache/: entry.rs  mod.rs  sqlite.rs
crates/storage/src/s3_check_cache/: entry.rs  mod.rs  sqlite.rs
crates/storage/tests/: manifest_storage_integration.rs
crates/vfs/: Cargo.toml
crates/vfs-fskit/: Cargo.toml  README.md
crates/vfs-fskit/examples/: mount_fskit.rs
crates/vfs-fskit/src/: convert.rs  error.rs  fskit.rs  helpers.rs  lib.rs  options.rs
crates/vfs-projfs/: .gitignore  Cargo.toml  IMPLEMENTATION.md  README.md
crates/vfs-projfs/examples/: README.md  mount_projfs.rs
crates/vfs-projfs/src/: error.rs  lib.rs  options.rs
crates/vfs-projfs/src/callbacks/: background.rs  mod.rs  modified_paths.rs  path_registry.rs  stats.rs  vfs_callbacks.rs
crates/vfs-projfs/src/projection/: folder.rs  manifest.rs  mod.rs  types.rs
crates/vfs-projfs/src/util/: compare.rs  filetime.rs  mod.rs  wstr.rs
crates/vfs-projfs/src/virtualizer/: callbacks.rs  enumeration.rs  mod.rs  projfs.rs  sendable.rs
crates/vfs-projfs/tests/: integration_tests.rs
crates/vfs/examples/: README.md  mount_vfs.rs
crates/vfs/src/: builder.rs  error.rs  executor.rs  fuse.rs  fuse_writable.rs  lib.rs  memory_pool.rs  memory_pool_v2.rs  options.rs
crates/vfs/src/content/: mod.rs  s3_adapter.rs  store.rs
crates/vfs/src/diskcache/: error.rs  materialized.rs  memory_cache.rs  mod.rs  read_cache.rs  traits.rs
crates/vfs/src/inode/: dir.rs  file.rs  manager.rs  mod.rs  symlink.rs  types.rs
crates/vfs/src/write/: cache.rs  dirty.rs  dirty_dir.rs  export.rs  mod.rs  stats.rs
crates/vfs/tests/: dirty_file_edge_cases.rs  file_operations_matrix.rs  read_cache_integration.rs
crates/vfs/tests/integration/: README.md  vfs_e2e_test.sh
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
design/: bindings.md  common.md  file_system.md  hash-cache.md  manifest-storage.md  manifest-utils.md  model-design.md  path-mapping.md  storage-design.md  storage-profiles.md  todo.md  upload.md  vfs-async-refactoring.md  vfs-dirs.md  vfs-fskit.md  vfs-refactoring.md  vfs-trace-precaching.md  vfs-unified-memory-pool.md  vfs-write-perf.md  vfs-writes.md  vfs.md  wasm.md  win-fs-remaining-work.md  win-fs.md
design/examples/: example-bundle-submit.md  example-incremental-download-detailed.md  example-output-download.md
design/implementation/: order.md
design/manifestv2/: 2026-01-10-update.md  2026-01-10.md
design/vfs/: block-diagram.md  runtime.md  vfs_read_only_cache.md
perf/: dashmap-analysis.md  dashmap-improvements.md  perf-v2-report.txt  perf-v3-report.txt  vfs-perf-lock.md  vfs-read-path-improvements.md  vfs-read-perf-analysis.md  vfs-read-perf-analysis.txt  vfs-read-perf-comparison.md  vfs-read-perf2-analysis.txt  vfs-read-test.sh  vfs-write-optimization-results.md  vfs-write-perf-analysis.md  vfs-write-perf-v3-full.txt  vfs-write-perf-v3.data  vfs-write-perf-v4-analysis.txt  vfs-write-perf-v4.data  vfs-write-perf.data  vfs-write-perf2.data
utils/: README.md  create_and_upload_manifest.py
