[package]
name = "rusty-attachments-filesystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "File system operations for rusty-attachments"

[dependencies]
rusty-attachments-common = { path = "../common" }
rusty-attachments-model = { path = "../model" }
walkdir = "2.5"
globset = "0.4"
thiserror = "1.0"
lru = "0.12"
log = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.10"
