[package]
name = "rusty-attachments-model"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Job Attachments manifest model for Deadline Cloud"

[dependencies]
glob = "0.3"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions = "1.0"
