[package]
name = "rusty-attachments-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings for rusty-attachments"

[lib]
name = "rusty_attachments"
crate-type = ["cdylib"]

[dependencies]
rusty-attachments-model = { path = "../model" }
pyo3 = { version = "0.20", features = ["extension-module"] }
