[package]
name = "rusty-attachments-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings for rusty-attachments"

[lib]
name = "rusty_attachments"
crate-type = ["cdylib"]

[lints.rust]
# Silence pyo3 macro cfg warnings about internal features
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"gil-refs\"))"] }

[dependencies]
rusty-attachments-common = { path = "../common" }
rusty-attachments-model = { path = "../model" }
rusty-attachments-filesystem = { path = "../filesystem" }
rusty-attachments-profiles = { path = "../profiles" }
rusty-attachments-storage = { path = "../storage" }
rusty-attachments-storage-crt = { path = "../storage-crt" }
ja-deadline-utils = { path = "../ja-deadline-utils" }

pyo3 = { version = "0.22", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.22", features = ["tokio-runtime"] }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
