[package]
name = "rusty-attachments-vfs-projfs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ProjFS-based virtual filesystem for Deadline Cloud job attachments (Windows)"

# This crate is Windows-only
[target.'cfg(not(target_os = "windows"))'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Storage_ProjectedFileSystem",
    "Win32_System_Com",
] }

[dependencies]
async-trait = "0.1"
dashmap = "6"
parking_lot = "0.12"
smallvec = "1.13"
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }

# Internal crates (shared primitives)
rusty-attachments-common = { path = "../common" }
rusty-attachments-model = { path = "../model" }
rusty-attachments-storage = { path = "../storage" }
rusty-attachments-storage-crt = { path = "../storage-crt" }

# Shared VFS primitives
rusty-attachments-vfs = { path = "../vfs", default-features = false }

[dev-dependencies]
ctrlc = "3.4"
dirs = "5.0"
tempfile = "3.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
tracing-subscriber = "0.3"

[[example]]
name = "mount_projfs"
