[package]
name = "rusty-attachments-vfs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "FUSE-based virtual filesystem for Deadline Cloud job attachments"

[features]
default = []
fuse = ["dep:fuser", "dep:libc"]

[dependencies]
async-trait = "0.1"
fuser = { version = "0.14", optional = true }
futures = "0.3"
libc = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
tracing = "0.1"

# Internal crates
rusty-attachments-common = { path = "../common" }
rusty-attachments-model = { path = "../model" }
rusty-attachments-storage = { path = "../storage" }
rusty-attachments-storage-crt = { path = "../storage-crt" }

[dev-dependencies]
ctrlc = "3.4"
dirs = "5.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[[example]]
name = "mount_vfs"
required-features = ["fuse"]
