[package]
name = "rusty-attachments-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM bindings for rusty-attachments"

[lib]
crate-type = ["cdylib"]

[dependencies]
rusty-attachments-model = { path = "../model" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
