[package]
name = "tauri-example"
version = "0.1.0"
edition = "2021"
description = "Example Tauri application"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
