[package]
name = "tauri-example"
version = "0.1.0"
edition = "2021"
description = "Job Attachment Uploader - Tauri desktop application"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "dialog-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

# Internal crates
ja-deadline-utils = { path = "../../ja-deadline-utils" }
rusty-attachments-common = { path = "../../common" }
rusty-attachments-filesystem = { path = "../../filesystem" }
rusty-attachments-model = { path = "../../model" }
rusty-attachments-storage = { path = "../../storage" }
rusty-attachments-storage-crt = { path = "../../storage-crt" }
