[package]
name = "tauri-example"
version = "0.1.0"
edition = "2021"
description = "Job Attachment Uploader - Tauri desktop application"

[lib]
name = "tauri_example"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

# Internal crates
ja-deadline-utils = { path = "../../ja-deadline-utils" }
rusty-attachments-common = { path = "../../common" }
rusty-attachments-filesystem = { path = "../../filesystem" }
rusty-attachments-model = { path = "../../model" }
rusty-attachments-storage = { path = "../../storage" }
rusty-attachments-storage-crt = { path = "../../storage-crt" }
